--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         #character-container {
             position: absolute;
-            bottom: 0;
+            bottom: 200px;
             left: 0;
             width: 100%;
             height: 80%;
